--- a/src/components/Player/index.module.less
+++ b/src/components/Player/index.module.less
@@ -39,6 +39,10 @@
     }
     &__song-info {
         margin-left: auto;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
         &__cover {
             height: 80%;
             border-radius: 6 px;
