--- a/src/components/Player/index.module.less
+++ b/src/components/Player/index.module.less
@@ -1,8 +1,9 @@
 .player {
-    position: fixed;
-    bottom: 0px;
+    // position: fixed;
+    // bottom: 0px;
+    margin-bottom: 0px;
+    margin-top: auto;
     display: flex;
-    // justify-content: center;
     height: 100px;
     align-items: center;
     background-color: rgb(247, 246, 246);
